grammar.js
    module: ($) => repeat($._statement),

    _statement: ($) => choice($._simple_statements, $._compound_statement),

    // Simple statements

    return_statement: ($) => seq("return", optional($._expressions)),

    _expressions: ($) => choice($.expression, $.expression_list),

    pass_statement: (_) => prec.left("pass"),
    break_statement: (_) => prec.left("break"),
    continue_statement: (_) => prec.left("continue"),

    // Compound statements

    if_statement: ($) =>
      seq(
        optional("comptime"),
        "if",
        field("condition", $.expression),
        ":",
        field("consequence", $._suite),
        repeat(field("alternative", $.elif_clause)),
        optional(field("alternative", $.else_clause))
      ),

    else_clause: ($) => seq("else", ":", field("body", $._suite)),

    while_statement: ($) =>
      seq(
        "while",
        field("condition", $.expression),
        ":",
        field("body", $._suite),
        optional(field("alternative", $.else_clause))
      ),

    try_statement: ($) =>
      seq(
        "try",
        ":",
        field("body", $._suite),
        repeat($.except_clause),
        optional($.else_clause),
        optional($.finally_clause)
      ),

    except_clause: ($) =>
      seq(
        "except",
        optional(token(prec(1, "*"))),
        optional(
          choice(
            seq(
              field("value", $.expression),
              optional(seq("as", field("alias", $.expression)))
            ),
            commaSep1(field("value", $.expression))
          )
        ),
        ":",
        $._suite
      ),

    finally_clause: ($) => seq("finally", ":", $._suite),

    function_definition: ($) =>
      seq(
        "def",
        field("name", $.identifier),
        field("type_parameters", optional($.parameter_list)),
        field("argument_list", $.argument_list),
        // TODO: Which one comes first in place, raises or effects
        field("raises_clause", optional($.raises_clause)),
        field("effects", optional($.effects)),
        optional(seq("->", field("return_type", $.type))),
        ":",
        field("body", $._suite)
      ),
    argument_list: ($) => seq("(", optional($._arguments), ")"),

    struct_definition: ($) =>
      seq(
        "struct",
        field("name", $.identifier),
        field("type_parameters", optional($.parameter_list)),
        field("traits", optional($.call_argument_list)),
        ":",
        field("body", $._suite)
      ),
    parameter_list: ($) =>
      seq(
        "[",
        commaSep1(
          choice($.type, $.infer_only_marker, seq($.type, "=", $.type))
        ),
        optional(","),
        "]"
      ),

    trait_definition: ($) =>
      seq(
        "trait",
        field("name", $.identifier),
        field("supertraits", optional($.call_argument_list)),
        ":",
        field("body", $._suite)
      ),

    call_argument_list: ($) =>
      seq(
        "(",
        optional(
          commaSep1(
            choice(
              $.expression,
              $.list_splat,
              $.dictionary_splat,
              alias($.parenthesized_list_splat, $.parenthesized_expression),
              $.keyword_argument
            )
          )
        ),
        optional(","),
        ")"
      ),

    decorated_definition: ($) =>
      seq(
        repeat1($.decorator),
        field(
          "definition",
          choice($.struct_definition, $.trait_definition, $.function_definition)
        )
      ),

    decorator: ($) => seq("@", $.expression, $._newline),

    _suite: ($) =>
      choice(
        alias($._simple_statements, $.block),
        seq($._indent, $.block),
        alias($._newline, $.block)
      ),

    block: ($) => seq(repeat($._statement), $._dedent),

    _arguments: ($) => seq(commaSep1($.argument), optional(",")),

    self_argument: ($) => seq(optional(choice("mut", "out", "deinit")), "self"),

    not_operator: ($) =>
      prec(PREC.not, seq("not", field("argument", $.expression))),

    binary_operator: ($) => {
      const table = [
        [prec.left, "+", PREC.plus],
        [prec.left, "-", PREC.plus],
        [prec.left, "*", PREC.times],
        [prec.left, "@", PREC.times],
        [prec.left, "/", PREC.times],
        [prec.left, "%", PREC.times],
        [prec.left, "//", PREC.times],
        [prec.right, "**", PREC.power],
        [prec.left, "|", PREC.bitwise_or],
        [prec.left, "&", PREC.bitwise_and],
        [prec.left, "^", PREC.xor],
        [prec.left, "<<", PREC.shift],
        [prec.left, ">>", PREC.shift],
      ];

      // @ts-ignore
      return choice(
        ...table.map(([fn, operator, precedence]) =>
          fn(
            precedence,
            seq(
              field("left", $.primary_expression),
              // @ts-ignore
              field("operator", operator),
              field("right", $.primary_expression)
            )
          )
        )
      );
    },

    _not_in: (_) => seq("not", "in"),

    _is_not: (_) => seq("is", "not"),

    comparison_operator: ($) =>
      prec.left(
        PREC.compare,
        seq(
          $.primary_expression,
          repeat1(
            seq(
              field(
                "operators",
                choice(
                  "<",
                  "<=",
                  "==",
                  "!=",
                  ">=",
                  ">",
                  "<>",
                  "in",
                  alias($._not_in, "not in"),
                  "is",
                  alias($._is_not, "is not")
                )
              ),
              $.primary_expression
            )
          )
        )
      ),

    assignment: ($) => choice($._comptime_assignment, $._regular_assignment),
    _comptime_assignment: ($) =>
      seq(
        "comptime",
        field("left", $._left_hand_side),
        choice(
          seq("=", field("right", $._comptime_right_hand_side)),
          seq(":", field("type", $.type)),
          seq(
            ":",
            field("type", $.type),
            "=",
            field("right", $._comptime_right_hand_side)
          )
        )
      ),
    _regular_assignment: ($) =>
      seq(
        optional("var"),
        field("left", $._left_hand_side),
        choice(
          seq("=", field("right", $._right_hand_side)),
          seq(":", field("type", $.type)),
          seq(
            ":",
            field("type", $.type),
            "=",
            field("right", $._right_hand_side)
          )
        )
      ),

    augmented_assignment: ($) =>
      seq(
        field("left", $._left_hand_side),
        field(
          "operator",
          choice(
            "+=",
            "-=",
            "*=",
            "/=",
            "@=",
            "//=",
            "%=",
            "**=",
            ">>=",
            "<<=",
            "&=",
            "^=",
            "|="
          )
        ),
        field("right", $._right_hand_side)
      ),

    _left_hand_side: ($) => choice($.pattern, $.pattern_list),

    pattern_list: ($) =>
      seq(
        $.pattern,
        choice(",", seq(repeat1(seq(",", $.pattern)), optional(",")))
      ),

    _right_hand_side: ($) =>
      choice(
        $.expression,
        $.expression_list,
        $.assignment,
        $.augmented_assignment,
        $.pattern_list,
        $.yield
      ),
    attribute: ($) =>
      prec(
        PREC.call,
        seq(
          field("object", choice($.primary_expression, "self")),
          ".",
          field("attribute", $.identifier)
        )
      ),

    subscript: ($) =>
      prec(
        PREC.call,
        seq(
          field("value", $.primary_expression),
          "[",
          commaSep1(field("subscript", choice($.expression, $.slice))),
          optional(","),
          "]"
        )
      ),

    ellipsis: (_) => "...",

    call: ($) =>
      prec(
        PREC.call,
        seq(
          field("function", choice($.identifier, $.attribute, $.self_type)),
          field("type_constraint", optional($.parameter_list)),
          field(
            "arguments",
            choice($.generator_expression, $.call_argument_list)
          )
        )
      ),
    typed_argument: ($) =>
      prec(
        PREC.typed_argument,
        seq(
          optional(choice("mut", "var", "out", "deinit", "ref")),
          choice(
            $.identifier,
            $.list_splat_pattern,
            $.dictionary_splat_pattern
          ),
          ":",
          field("type", $.type)
        )
      ),

    type: ($) =>
      choice(
        prec(1, $.expression),
        $.splat_type,
        $.generic_type,
        $.union_type,
        $.constrained_type,
        $.member_type,
        $.self_type,
        $.function_pointer_type
      ),
    constrained_type: ($) =>
      prec.right(seq(optional("var"), $.type, ":", $.type)),
    member_type: ($) => seq($.type, ".", $.identifier),
    self_type: (_) => "Self",
    keyword_argument: ($) =>
      seq(
        field("name", choice($.identifier, $.keyword_identifier)),
        "=",
        field("value", $.expression)
      ),

    // Literals

    parenthesized_expression: ($) =>
      prec(
        PREC.parenthesized_expression,
        seq("(", choice($.expression, $.yield), ")")
      ),

    concatenated_string: ($) => seq($.string, repeat1($.string)),

    string: ($) =>
      seq(
        $.string_start,
        repeat(choice($.interpolation, $.string_content)),
        $.string_end
      ),

    string_content: ($) =>
      prec.right(
        repeat1(
          choice(
            $.escape_interpolation,
            $.escape_sequence,
            $._not_escape_sequence,
            $._string_content
          )
        )
      ),

    interpolation: ($) =>
      seq(
        "{",
        field("expression", $._f_expression),
        optional("="),
        optional(field("type_conversion", $.type_conversion)),
        optional(field("format_specifier", $.format_specifier)),
        "}"
      ),

    _f_expression: ($) =>
      choice($.expression, $.expression_list, $.pattern_list, $.yield),

    escape_sequence: (_) =>
      token.immediate(
        prec(
          1,
          seq(
            "\\",
            choice(
              /u[a-fA-F\d]{4}/,
              /U[a-fA-F\d]{8}/,
              /x[a-fA-F\d]{2}/,
              /\d{1,3}/,
              /\r?\n/,
              /['"abfrntv\\]/,
              /N\{[^}]+\}/
            )
          )
        )
      ),

    _not_escape_sequence: (_) => token.immediate("\\"),

    integer: (_) =>
      token(
        choice(
          seq(choice("0x", "0X"), repeat1(/_?[A-Fa-f0-9]+/)),
          seq(choice("0o", "0O"), repeat1(/_?[0-7]+/)),
          seq(choice("0b", "0B"), repeat1(/_?[0-1]+/)),
          repeat1(/[0-9]+_*/)
        )
      ),

    float: (_) => {
      const digits = repeat1(/[0-9]+_?/);
      const exponent = seq(/[eE][\+-]?/, digits);

      return token(
        seq(
          choice(
            seq(digits, ".", optional(digits), optional(exponent)),
            seq(optional(digits), ".", digits, optional(exponent)),
            seq(digits, exponent)
          ),
          optional(/[jJ]/)
        )
      );
    },

    identifier: ($) =>
      choice(
        $._identifier,
        seq(
          $.escaped_identifier_start,
          repeat1($.escaped_identifier_content),
          $.escaped_identifier_end
        )
      ),

    _identifier: (_) => /[a-zA-Z_][a-zA-Z0-9_]*/,

    true: (_) => "True",
    false: (_) => "False",
    none: (_) => "None",
