test/corpus/mlir.txt
====
MLIR
====

def main():
    var a: __mlir_type.index = __mlir_attr.`42 : index`
    var b: __mlir_type.index = __mlir_attr.`8 : index`
    var c = __mlir_op.`index.add`(a, b)
    print(Int(mlir_value=c))

---

(module
  (function_definition
    name: (identifier)
    argument_list: (argument_list)
    body: (block
      (assignment
        left: (identifier)
        type: (type
          (attribute
            object: (identifier)
            attribute: (identifier)))
        right: (attribute
          object: (identifier)
          attribute: (identifier
            (escaped_identifier_start)
            (escaped_identifier_content)
            (escaped_identifier_end))))
      (assignment
        left: (identifier)
        type: (type
          (attribute
            object: (identifier)
            attribute: (identifier)))
        right: (attribute
          object: (identifier)
          attribute: (identifier
            (escaped_identifier_start)
            (escaped_identifier_content)
            (escaped_identifier_end))))
      (assignment
        left: (identifier)
        right: (call
          function: (attribute
            object: (identifier)
            attribute: (identifier
              (escaped_identifier_start)
              (escaped_identifier_content)
              (escaped_identifier_end)))
          arguments: (call_argument_list
            (identifier)
            (identifier))))
      (call
        function: (identifier)
        arguments: (call_argument_list
          (call
            function: (identifier)
            arguments: (call_argument_list
              (keyword_argument
                name: (identifier)
                value: (identifier)))))))))
