test/corpus/pet_peeves.txt
============
Pet Peeves 1
============

SIMD[DType.int16, 1].MIN

---

(module
  (attribute
    object: (subscript
      value: (identifier)
      subscript: (attribute
        object: (identifier)
        attribute: (identifier))
      subscript: (integer))
    attribute: (identifier)))
