test/corpus/struct.txt
======
Struct
======

struct Point:
    var x: Int
    var y: Int

    def __init__(out self, x: Int, y: Int):
        self.x = x
        self.y = y

    def distance(self) -> Float64:
        return sqrt(
            Float64(self.x * self.x + self.y * self.y)
        )

---

(module
  (struct_definition
    name: (identifier)
    body: (block
      (assignment
        left: (identifier)
        type: (type
          (identifier)))
      (assignment
        left: (identifier)
        type: (type
          (identifier)))
      (function_definition
        name: (identifier)
        argument_list: (argument_list
          (self_argument)
          (typed_argument
            (identifier)
            type: (type
              (identifier)))
          (typed_argument
            (identifier)
            type: (type
              (identifier))))
        body: (block
          (assignment
            left: (attribute
              attribute: (identifier))
            right: (identifier))
          (assignment
            left: (attribute
              attribute: (identifier))
            right: (identifier))))
      (function_definition
        name: (identifier)
        argument_list: (argument_list
          (self_argument))
        return_type: (type
          (identifier))
        body: (block
          (return_statement
            (call
              function: (identifier)
              arguments: (call_argument_list
                (call
                  function: (identifier)
                  arguments: (call_argument_list
                    (binary_operator
                      left: (binary_operator
                        left: (attribute
                          attribute: (identifier))
                        right: (attribute
                          attribute: (identifier)))
                      right: (binary_operator
                        left: (attribute
                          attribute: (identifier))
                        right: (attribute
                          attribute: (identifier))))))))))))))

================================
Struct with Trait and Parameters
================================

struct Name[T: Writable & Copyable & ImplicitlyDestructible]:
    pass

struct Name(TraitA, TraitB):
    pass

struct Name[T: Writable & Copyable & ImplicitlyDestructible](TraitA, TraitB):
    pass

---

(module
  (struct_definition
    name: (identifier)
    type_parameters: (parameter_list
      (type
        (constrained_type
          (type
            (identifier))
          (type
            (binary_operator
              left: (binary_operator
                left: (identifier)
                right: (identifier))
              right: (identifier))))))
    body: (block
      (pass_statement)))
  (struct_definition
    name: (identifier)
    traits: (call_argument_list
      (identifier)
      (identifier))
    body: (block
      (pass_statement)))
  (struct_definition
    name: (identifier)
    type_parameters: (parameter_list
      (type
        (constrained_type
          (type
            (identifier))
          (type
            (binary_operator
              left: (binary_operator
                left: (identifier)
                right: (identifier))
              right: (identifier))))))
    traits: (call_argument_list
      (identifier)
      (identifier))
    body: (block
      (pass_statement))))
