test/corpus/try_except.txt
====================
Try Except Statement
====================

try:
    operation()
except e:
    handle_error(e)
else:
    on_success()
finally:
    cleanup()

---

(module
  (try_statement
    body: (block
      (call
        function: (identifier)
        arguments: (call_argument_list)))
    (except_clause
      value: (identifier)
      (block
        (call
          function: (identifier)
          arguments: (call_argument_list
            (identifier)))))
    (else_clause
      body: (block
        (call
          function: (identifier)
          arguments: (call_argument_list))))
    (finally_clause
      (block
        (call
          function: (identifier)
          arguments: (call_argument_list))))))
